--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -37,9 +37,19 @@
   max-width: 400px;
   height: 280px;
   margin: 24px;
+  @media (max-width: 800px) {
+    min-width: 240px;
+    max-width: 340px;
+    height: 280px;
+    margin: 8px 0;
+  }
+
   .text {
     width: 300px;
     padding: 0 40px;
+    @media (max-width: 800px) {
+      width: 200px;
+    }
   }
 }
 
